# controllers/ownerController.js
@@ -4,6 +4,8 @@ const utils = require('../utils/writer.js');
 const middleWare = require('../middleware/auth')
 const ownerService = require('../service/ownerService');
 const agentService = require('../service/agentService')
+const employeeService = require('../service/employeeService')
+const playerService = require('../service/playerService')
 
 /************************ Main Operation of Owner*************************/
 
@@ -42,23 +44,31 @@ module.exports.ownerAgentRegister = function ownerAgentRegister(req, res, next, 
 };
 
 module.exports.listAgentByOwnerId = function listAgentByOwnerId(req, res, next) {
-  ownerService.listAgentByOwnerId(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    ownerService.listAgentByOwnerId(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 module.exports.listAgentPaymentRequestAll = function listAgentPaymentRequestAll(req, res, next) {
-  ownerService.listAgentPaymentRequestAll(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    ownerService.listAgentPaymentRequestAll(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 /************************ Main Operation of Owner*************************/
@@ -75,23 +85,31 @@ module.exports.listAgentPaymentRequestAll = function listAgentPaymentRequestAll(
 /************************ Agent Operation By Owner*************************/
 
 module.exports.findAgentWalletById = function findAgentWalletById(req, res, next) {
-  agentService.findAgentWalletById(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    agentService.findAgentWalletById(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 module.exports.getAgentInfo = function getAgentInfo(req, res, next) {
-  agentService.getAgentInfo(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    agentService.getAgentInfo(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 module.exports.agentPaymentRequestByOwner = function agentPaymentRequestByOwner(req, res, next) {
@@ -105,68 +123,121 @@ module.exports.agentPaymentRequestByOwner = function agentPaymentRequestByOwner(
 };
 
 module.exports.paymentRequestListOfAgent = function paymentRequestListOfAgent(req, res, next) {
-  agentService.paymentRequestListOfAgent(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    agentService.paymentRequestListOfAgent(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 module.exports.getAgentPaymentDetailById = function getAgentPaymentDetailById(req, res, next) {
-  agentService.getAgentPaymentDetailById(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    agentService.getAgentPaymentDetailById(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 
 module.exports.approveAgentPaymentRequest = function approveAgentPaymentRequest(req, res, next) {
-  agentService.approveAgentPaymentRequest(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    agentService.approveAgentPaymentRequest(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 module.exports.disapproveAgentPaymentRequest = function disapproveAgentPaymentRequest(req, res, next) {
-  agentService.disapproveAgentPaymentRequest(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    agentService.disapproveAgentPaymentRequest(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 module.exports.cancelAgentPaymentRequest = function cancelAgentPaymentRequest(req, res, next) {
-  agentService.cancelAgentPaymentRequest(req)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+  middleWare.authToken(req).then(function () {
+    agentService.cancelAgentPaymentRequest(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 /************************ Agent Operation By Owner*************************/
 
 
 
-module.exports.ownerRegister = function ownerRegister(req, res, next, body) {
-  ownerService.ownerRegister(body)
-    .then(function (response) {
-      utils.writeSuccess(res, response);
-    })
-    .catch(function (response) {
-      utils.writeError(res, response);
-    });
+
+
+
+
+
+
+/************************ Employee Operation By Owner*************************/
+module.exports.listEmployee = function listEmployee(req, res, next) {
+  middleWare.authToken(req).then(function () {
+    employeeService.listEmployee(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
 };
 
 
+
+
+
+
+
+
+
+
+/************************Player Operation By Agent*************************/
+module.exports.listPlayer = function listPlayer(req, res, next) {
+  middleWare.authToken(req).then(function () {
+    playerService.listPlayer(req)
+      .then(function (response) {
+        utils.writeSuccess(res, response);
+      })
+      .catch(function (response) {
+        utils.writeError(res, response);
+      });
+  }).catch(function (response) {
+    utils.writeError(res, response);
+  });
+};
